[package]
name = "daemon-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
bdk-ext = { path = "../bdk-ext" }
daemon = { path = "../daemon" }
maker = { path = "../maker" }
mockall = "0.11"
mockall_derive = "0.11"
model = { path = "../model" }
otel-tests = { version = "0.1", default-features = false }
portpicker = "0.1.1"
quiet-spans = { path = "../quiet-spans" }
rand = "0.6"
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
sqlite-db = { path = "../sqlite-db" }
time = "0.3.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "tracing"] }
tokio-extras = { path = "../tokio-extras", features = ["xtra"] }
tracing = { version = "0.1" }
xtra = { version = "0.6", features = ["instrumentation"] }
xtra-bitmex-price-feed = { path = "../xtra-bitmex-price-feed" }
xtra-libp2p = { path = "../xtra-libp2p" }
xtra_productivity = { version = "0.1", features = ["instrumentation"] }

[features]
otlp = ["otel-tests/otlp"]
