[package]
name = "maker"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1.59"
bdk = { version = "0.23.0", default-features = false, features = ["electrum"] }
clap = { version = "4", features = ["derive"] }
conquer-once = "0.3"
daemon = { path = "../daemon" }
futures = { version = "0.3", default-features = false, features = ["std"] }
hex = "0.4"
http-api-problem = { version = "0.55.0", features = ["rocket"] }
libp2p-tcp = { version = "0.33", default-features = false, features = ["tokio"] }
maia = "0.2.0"
maia-core = "0.1.1"
model = { path = "../model" }
nonempty = { version = "0.8.0", default-features = false }
offer = { path = "../xtra-libp2p-offer", package = "xtra-libp2p-offer" }
ping-pong = { path = "../xtra-libp2p-ping", package = "xtra-libp2p-ping" }
quiet-spans = { path = "../quiet-spans" }
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
rocket-cookie-auth = { path = "../rocket-cookie-auth" }
rollover = { path = "../xtra-libp2p-rollover", package = "xtra-libp2p-rollover" }
rust-embed = "6.4"
rust-embed-rocket = { path = "../rust-embed-rocket" }
serde = { version = "1", features = ["derive"] }
shared-bin = { path = "../shared-bin" }
sqlite-db = { path = "../sqlite-db" }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"
time = { version = "0.3.15", features = ["serde", "macros", "parsing", "formatting", "serde-well-known"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "tracing"] }
tokio-extras = { path = "../tokio-extras", features = ["xtra"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.5.9"
tracing = { version = "0.1" }
uuid = "1.1"
x25519-dalek = { version = "1.1" }
xtra = { version = "0.6", features = ["instrumentation"] }
xtra-bitmex-price-feed = { path = "../xtra-bitmex-price-feed" }
xtra-libp2p = { path = "../xtra-libp2p" }
xtra_productivity = { version = "0.1.0", features = ["instrumentation"] }
xtras = { path = "../xtras" }

[build-dependencies]
anyhow = "1"
