[package]
name = "rocket-cookie-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dashmap = "5"
http-api-problem = { version = "0.55.0", features = ["rocket"] }
rand = "0.8.5"
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
rust-argon2 = "1.0.0"
serde = "1"
serde_json = "1"
thiserror = "1"
time = "0.3.15"
tracing = "0.1"
