[package]
name = "xtra-libp2p-offer"
version = "0.1.0"
edition = "2021"
description = "Implementation of the `/itchysats/offer` protocol using xtra-libp2p."

[dependencies]
anyhow = "1"
async-trait = "0.1.59"
asynchronous-codec = { version = "0.6.0", features = ["json"] }
conquer-once = "0.3.2"
futures = { version = "0.3", default-features = false }
model = { path = "../model" }
nonempty = { version = "0.8.0", default-features = false }
prometheus = { version = "0.13", default-features = false }
quiet-spans = { path = "../quiet-spans" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "tracing"] }
tokio-extras = { path = "../tokio-extras" }
tracing = "0.1"
xtra = { version = "0.6" }
xtra-libp2p = { path = "../xtra-libp2p" }
xtra_productivity = { version = "0.1.0", features = ["instrumentation"] }
xtras = { path = "../xtras" }

[dev-dependencies]
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
sluice = "0.5"
time = { version = "0.3.15", features = ["macros"] }
tokio = { version = "1", features = ["macros", "tracing"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
