[package]
name = "xtra-libp2p"
version = "0.1.0"
edition = "2021"
description = "Networking with xtra made easy. Backed by libp2p-core."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
conquer-once = "0.3"
futures = "0.3"
libp2p-core = { version = "0.33", default-features = false }
libp2p-noise = "0.36"
multistream-select = "0.12"
pin-project = "1"
prometheus = { version = "0.13", default-features = false }
thiserror = "1"
tokio = { version = "1", features = ["time", "tracing"] }
tokio-extras = { path = "../tokio-extras", features = ["xtra"] }
tracing = "0.1"
void = "1"
xtra = { version = "0.6", features = ["tokio"] }
xtra_productivity = { version = "0.1.0", features = ["instrumentation"] }
xtras = { path = "../xtras" }
yamux = "0.10"

[dev-dependencies]
asynchronous-codec = "0.6"
clap = { version = "4.0", features = ["derive"] }
libp2p-tcp = { version = "0.33", default-features = false, features = ["tokio"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
